Improve FFmpeg wrapper